@@ -393,6 +393,9 @@ case "$1" in
 			omv-mkconf postfix
 			invoke-rc.d postfix restart
 		fi
+		if dpkg --compare-versions "$2" lt-nl "0.4.2"; then
+			sed -i -e "s/BOOTLOGD_ENABLE=.*/BOOTLOGD_ENABLE=Yes/" /etc/default/bootlogd
+		fi
 	;;
 
 	triggered)
