@@ -123,7 +123,13 @@ class OMVLogFile extends OMVObject {
 	}
 }
 
+///////////////////////////////////////////////////////////////////////////////
 // Register default logfile types
+///////////////////////////////////////////////////////////////////////////////
+
+// /var/log/syslog:
+// Oct 19 04:24:36 openmediavault init: Switching to runlevel: 6
+// Oct 19 04:24:38 openmediavault watchdog[1589]: stopping daemon (5.9)
 OMVLogFile::registerType("syslog", array(
   "filename" => "syslog",
   "filepath" => "/var/log/syslog",
@@ -141,6 +147,9 @@ OMVLogFile::registerType("syslog", array(
 	  "user" => 2,
 	  "event" => 3
   )));
+// /var/log/daemon.log:
+// Oct 19 04:25:07 openmediavault dhclient: Sending on   Socket/fallback
+// Oct 19 04:25:08 openmediavault wd_keepalive[1164]: stopping watchdog keepalive daemon (5.9)
 OMVLogFile::registerType("daemon", array(
   "filename" => "daemon.log",
   "filepath" => "/var/log/daemon.log",
@@ -158,6 +167,9 @@ OMVLogFile::registerType("daemon", array(
 	  "user" => 2,
 	  "event" => 3
   )));
+// /var/log/auth.log:
+// Oct 19 04:24:44 openmediavault sshd[1550]: Received signal 15; terminating.
+// Oct 19 04:24:44 openmediavault sshd[2472]: Exiting on signal 15
 OMVLogFile::registerType("auth", array(
   "filename" => "auth.log",
   "filepath" => "/var/log/auth.log",
@@ -175,6 +187,9 @@ OMVLogFile::registerType("auth", array(
 	  "user" => 2,
 	  "event" => 3
   )));
+// /var/log/messages:
+// Oct 19 04:24:36 openmediavault shutdown[9419]: shutting down for system reboot
+// Oct 19 04:24:49 openmediavault kernel: Kernel logging (proc) stopped.
 OMVLogFile::registerType("messages", array(
   "filename" => "messages",
   "filepath" => "/var/log/messages",
@@ -191,5 +206,24 @@ OMVLogFile::registerType("messages", array(
 	  ),
 	  "user" => 2,
 	  "event" => 3
+  )));
+// /var/log/boot:
+// Fri Oct 19 04:25:05 2012: Setting parameters of disc: (none).
+// Fri Oct 19 04:25:05 2012: Setting preliminary keymap...done.
+OMVLogFile::registerType("boot", array(
+  "filename" => "boot",
+  "filepath" => "/var/log/boot",
+  "regex" => "/^(\S+\s+\S+\s+\d+\s+\S+\s+\d+):\s+(.*)$/",
+  "columns" => array(
+	  "ts" => array(
+		  "index" => 1,
+		  "func" => create_function('$v', 'return strpdate($v,"D M j H:i:s Y");')
+	  ),
+	  "date" => array(
+		  "index" => 1,
+		  "func" => create_function('$v',
+			'return strftime("%c", strpdate($v,"D M j H:i:s Y"));')
+	  ),
+	  "event" => 2
   )));
 ?>
