@@ -289,7 +289,7 @@ Ext.extend(OMV.Module.System.CronPropertyDialog, OMV.CfgObjectDialog, {
 				allowBlank: false,
 				editable: false,
 				triggerAction: "all",
-				value: new Date().format("i"),
+				value: String(new Date().getMinutes()),
 				flex: 1
 			},{
 				xtype: "checkbox",
@@ -318,7 +318,7 @@ Ext.extend(OMV.Module.System.CronPropertyDialog, OMV.CfgObjectDialog, {
 				allowBlank: false,
 				editable: false,
 				triggerAction: "all",
-				value: new Date().format("H"),
+				value: String(new Date().getHours()),
 				flex: 1
 			},{
 				xtype: "checkbox",
