@@ -914,7 +914,7 @@ Ext.extend(OMV.Module.Services.Rsync.JobPropertyDialog, OMV.CfgObjectDialog, {
 				allowBlank: false,
 				editable: false,
 				triggerAction: "all",
-				value: new Date().format("i"),
+				value: String(new Date().getMinutes()),
 				flex: 1
 			},{
 				xtype: "checkbox",
@@ -943,7 +943,7 @@ Ext.extend(OMV.Module.Services.Rsync.JobPropertyDialog, OMV.CfgObjectDialog, {
 				allowBlank: false,
 				editable: false,
 				triggerAction: "all",
-				value: new Date().format("H"),
+				value: String(new Date().getHours()),
 				flex: 1
 			},{
 				xtype: "checkbox",
