@@ -1,9 +1,11 @@
 openmediavault (0.4.2) stable; urgency=low
 
   * Update locales.
+  * Fix various bugs in WebGUI.
   * Fix bug in OMVStorageDeviceAbstract::getDeviceFileById() method.
   * Mantis 0000618: Disable temperature logging if temperature checks are
     disabled under SMART.
+  * Mantis 0000628: Enable and view boot log messages.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Thu, 18 Oct 2012 17:50:54 +0200
 
